--- a/dahlia.css
+++ b/dahlia.css
@@ -772,8 +772,7 @@ section {
 }
 
 #englightenment {
-  background-color: #A2CBF7;
-  color: black;
+  background-color: #071532;
 }
 
 @media only screen and
