--- a/dahlia.css
+++ b/dahlia.css
@@ -560,7 +560,7 @@ section {
     section {
       height: 100%;
       width: 100%;
-      background: url("./Photos/Brown.JPG") no-repeat bottom right;
+      background: url("Brown.JPG") no-repeat bottom right;
     }
 
     #stories {
@@ -657,7 +657,7 @@ section {
     section {
       height: 100%;
       width: 100%;
-      background: url("./Photos/Brown.JPG") no-repeat bottom right;
+      background: url("Brown.JPG") no-repeat bottom right;
     }
 
     #stories {
