--- a/dahlia.css
+++ b/dahlia.css
@@ -547,7 +547,6 @@ section {
   (max-device-width: 480px) and
   (-webkit-min-device-pixel-ratio: 2) and
   (orientation: portrait) {
-
   }
 
 /* iPhone 5, 5S, 5C and 5SE Stories (Portrait) CHANGE THIS */
@@ -567,18 +566,18 @@ section {
       justify-content: center;
       width: 100%;
       height: 7em;
-      font-size: 3.5em;
+      font-size: 4.5em;   /* changed from 3.5em to 4.5em */
     }
 
     #storiesTitle {
       color: #8DD1FC;
       text-align: center;
-      font-size: 2.75rem;
+      font-size: 5.75rem; /* changed from 2.75rem to 5.75rem */
     }
 
     #storiesDesc {
       text-align: center;
-      font-size: 1.5rem;
+      font-size: 4.5rem;   /* changed from 1.5rem to 4.5rem */
     }
 
     .scroll {
