--- a/dahlia.css
+++ b/dahlia.css
@@ -572,12 +572,12 @@ section {
     #storiesTitle {
       color: #8DD1FC;
       text-align: center;
-      font-size: 5.75em; /* changed from 2.75rem to 5.75rem */
+      font-size: 5.75rem; /* changed from 2.75rem to 5.75rem */
     }
 
     #storiesDesc {
       text-align: center;
-      font-size: 4.5em;   /* changed from 1.5rem to 4.5rem */
+      font-size: 4.5rem;   /* changed from 1.5rem to 4.5rem */
     }
 
     .scroll {
