--- a/dahlia.css
+++ b/dahlia.css
@@ -847,6 +847,12 @@ footer div {
   background-color: #071532;
 }
 
+#pigeon p:nth-child(2) { /* Added this, but does it work? */
+  display: hidden;
+  overflow: scroll;
+  z-index: 2;
+}
+
 /* iPhone 4 and 4S Tidbits of Nonsensical Gibberish (Portrait)
    CHECK TO SEE HOW THIS LOOKS */
 @media only screen and
