--- a/dahlia.css
+++ b/dahlia.css
@@ -847,7 +847,7 @@ footer div {
   background-color: #071532;
 }
 
-#pigeon p:nth-child(2) { /* Added this, but does it work? */
+#pigeon:nth-child(2) { /* Added this, but does it work? */
   display: hidden;
   overflow: scroll;
   z-index: 2;
