--- a/dahlia.css
+++ b/dahlia.css
@@ -883,12 +883,25 @@ footer div {
       justify-content: flex-start;
     }
     
-    #pigeon div {
+    /*#pigeon div {
       transition: box-shadow 0.95s;
     }
     
     #pigeon div:hover {
       box-shadow: 0px 30px 100px rgba(219,168,105,.4);
+    }*/
+    
+    #pigeon div {
+      overflow: scroll;
+    }
+    
+    #pigeon div:nth-child(1) {
+      z-index: 1;
+    }
+    
+    #pigeon div:nth-child(2) {
+      display: hidden;
+      z-index: 2;
     }
 }
 
