--- a/dahlia.css
+++ b/dahlia.css
@@ -814,7 +814,7 @@ footer div {
 /*-------Tidbits of Nonsensical Gibberish--------*/
 
 #fakepigeon {
-  background-color: #3C3FA1;
+  background-color: yellow;
 }
 
 #pigeon {
