--- a/dahlia.css
+++ b/dahlia.css
@@ -480,6 +480,10 @@ section {
   opacity: 0.65;
 }
 
+#pumpkinsDelirium {
+  background: url("FallLeaf.JPG") no-repeat right bottom;
+}
+
 #marigold {
   background: url("BackyardSunshine.JPG") no-repeat center left;
 }
@@ -1085,6 +1089,10 @@ footer div {
 
 #TCS {
   background-color: #3C3F51;
+}
+
+#APD {
+  background-color: #98456D;
 }
 
 #M {
