--- a/dahlia.css
+++ b/dahlia.css
@@ -171,7 +171,8 @@ a:hover {
 .quote {
   display: flex;
   justify-content: center;
-  font-family: 'Handlee';
+  /*font-family: 'Handlee';*/
+  font-family: 'Raleway';
 }
 
 .quote p {
@@ -187,6 +188,7 @@ a:hover {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  opacity: 0.85
 }
 
 .symbol p, #flippedSymbol p {
@@ -203,6 +205,12 @@ a:hover {
 
 /* Welcome */
 
+#howdy {
+  font-family: 'Handlee';
+  font-size: 1.25rem;
+  margin-bottom: 2px;
+}
+
 #welcome {
   height: 85%;
   width: 85%;
@@ -214,13 +222,17 @@ a:hover {
   border-right: none;
   border-bottom: none;
   border-radius: 3%;
+  z-index: 1000;
+  margin-bottom: 17px;
 }
 
 #welcome img {
   border: 3px dotted #DBA869;
   border-top: none;
-  height: 55%;
-  width: 55%;
+  /*height: 55%;
+  width: 55%;*/
+  height: 450px;
+  width: 450px;
   position: relative;
 }
 
@@ -228,11 +240,14 @@ a:hover {
   display: flex;
   flex-direction: column;
   align-items: center;
+  z-index: 1002;
 }
 
 #gnome p {
+  font-family: 'Handlee';
   line-height: 1.22rem;
   word-spacing: 0.03rem;
+  font-size: 1.25rem;
 }
 
 /* Lenovo fix for Welcome image */
@@ -405,6 +420,7 @@ a:hover {
 /* Stories */
 
 section {
+  z-index: 1003;
   width: 100%;
   border: 3px solid rgba(141,209,252,0.5);
   border-left: none;
@@ -455,6 +471,7 @@ section {
   border: 3px dotted #DBA869;
   overflow-y: scroll;
   color: Ivory;
+  /*color: #F5F5E6;*/
   opacity: 0.8;
   text-align: center;
 }
@@ -469,23 +486,30 @@ section {
 
 #strangeAttraction {
   background: url("Brown.JPG") no-repeat left center;
+  /*color: #D6D6CA;*/
 }
 
 #foodFreedom {
   background-color: #6E4443;
+  /*color: #F5F5E6;*/
+  /*color: #D6D6CA;*/
 }
 
 #chimneySweep {
   background: url("blackAndWhiteMoodyTrees.JPG") no-repeat center center;
-  opacity: 0.65;
+  opacity: 0.7;
+  /*color: #D6D6CA;*/
 }
 
 #pumpkinsDelirium {
   background: url("FallLeaf.JPG") no-repeat right bottom;
+  /*color: #F5F5E6;*/
+  /*color: #D6D6CA;*/
 }
 
 #marigold {
   background: url("BackyardSunshine.JPG") no-repeat center left;
+  /*color: #D6D6CA;*/
 }
 
 .smallerLinks {
@@ -885,7 +909,7 @@ footer div {
       display: flex;
       flex-direction: column;
       justify-content: flex-start;
-    }  
+    }
 }
 
 /* ----------- Videos ------------ */
@@ -980,6 +1004,7 @@ footer div {
   height: 250px;
   border-radius: 100%;
   border: 2px solid Ivory;
+  margin-bottom: 10px;
 }
 
 /* iPhone 4 and 4S About Me (Portrait) CHECK TO SEE HOW THIS LOOKS */
@@ -1057,6 +1082,10 @@ footer div {
   border-top: none;
   width: 80%;
   background-color: #00415E;
+  /*color: #F5F5E6;
+  color: #E5E5D8;
+  color: #D1D1C5;*/
+  color: #D6D6CA;
 }
 
 .mainstory {
@@ -1092,7 +1121,7 @@ footer div {
 }
 
 #APD {
-  background-color: #98456D;
+  background-color: #541F4E;
 }
 
 #M {
@@ -1142,3 +1171,631 @@ footer div {
       font-size: 3em;
     }
 }
+
+/* ******************************* Mr Cloud of Love ************************ */
+
+#mrcloud {
+  margin: auto;
+  position: relative;
+  height: 600px;
+  width: 500px;
+  margin-top: -50px;
+  margin-bottom: -135px;
+}
+
+#container {
+
+        width: 500px;
+        height: 500px;
+        margin: auto;
+        margin-top: 15%;
+        display: flex;
+        flex-direction: column;
+        margin-bottom: -30%;
+      }
+
+      .box {
+        width: 400px;
+        height: 500px;
+        margin: auto;
+        border-radius: 40%;
+        background-image: linear-gradient(#11717F, #D9717F);
+      }
+
+      .blob {
+        width: 300px;
+        height: 300px;
+        position: relative;
+        margin: auto;
+        top: 7%;
+        animation-name: upAndDown;
+        animation-duration: 48s;
+        animation-duration: 16s;
+        animation-duration: 48s;
+        animation-timing-function: linear;
+        animation-iteration-count: infinite;
+        animation-direction: normal;
+        border: 3px solid transparent; /* fix this later */
+      }
+
+      .hair {
+        top: 18%;
+        z-index: 1;
+        position: absolute;
+        width: 0;
+        height: 0;
+        border-bottom: 25px solid #F7F7F7;
+        border-left: 3px solid transparent;
+        border-right: 3px solid transparent;
+        border-radius: 20%;
+      }
+
+      #hair1 {
+        left: 39%;
+        transform: skewX(30deg);
+      }
+
+      #hair2 {
+        left: 44%;
+        transform: skewX(30deg);
+      }
+
+      #hair3 {
+        left: 49%;
+      }
+
+      #hair4 {
+        left: 54%;
+        transform: skewX(-30deg);
+      }
+
+      #hair5 {
+        left: 59%;
+        transform: skewX(-30deg);
+      }
+
+      .eyebrow {
+        position: absolute;
+        background-color: transparent;
+        width: 8%;
+        height: 8%;
+        border-radius: 50%;
+        box-shadow: 3px 3px 0px 0px #F7F7F7;
+        transform: rotate(-135deg);
+      }
+
+      #eyebrow1 {
+        z-index: 1;
+        left: 40%;
+        top: 33%;
+      }
+
+      #eyebrow2 {
+        z-index: 1;
+        left: 52%;
+        top: 33%;
+      }
+
+/* ********* HEAD (Eyes, nose, beard, mouth) *********** */
+
+      .blob-top {
+        position: relative;
+        top: 10%;
+        border: 3px solid #D9A071;
+        margin: auto;
+        margin-top: 15%;
+        background: #FFE1A9;
+        width: 35%;
+        height: 35%;
+        border-radius: 60% 60% 90% 90%;
+      }
+
+      .left-eye {
+        position: relative;
+        border-radius: 50%;
+        top: 34%;
+        left: 25%;
+        background: black;
+        width: 15%;
+        height: 10%;
+        border-radius: 50%;
+      }
+
+      .right-eye {
+        position: relative;
+        border-radius: 50%;
+        top: 24%;
+        left: 60%;
+        background: black;
+        width: 15%;
+        height: 10%;
+        border-radius: 50%;
+      }
+
+      .centerEye {
+        position: relative;
+        top: 15%;
+        margin: auto;
+        border-radius: 50%;
+        background: white;
+        width: 37%;
+        height: 37%;
+      }
+
+      .nose {
+        position: relative;
+        top: 35%;
+        border: 3px solid #D9A071;
+        width: 5%;
+        left: 45%;
+      }
+
+      .circ {
+        background-color: #F7F7F7;
+        border-radius: 50%;
+        border: 2px solid white;
+        border-right-color: transparent;
+        border-left-color: transparent;
+        width: 30px;
+        height: 30px;
+      }
+
+      #circle1 {
+        border-left: 2px solid white;
+        z-index: 2;
+        position: relative;
+        left: 0%;
+        top: 41%;
+      }
+
+      #circle2 {
+        z-index: 3;
+        position: relative;
+        left: 23%;
+        top: 8.5%;
+      }
+
+      #circle3 {
+        z-index: 4;
+        position: relative;
+        left: 46%;
+        top: -24%;
+      }
+
+      #circle4 {
+        border-right: 2px solid white;
+        z-index: 5;
+        position: relative;
+        left: 68%;
+        top: -57%;
+      }
+
+      #circle5 {
+        border-left: 2px solid white;
+        z-index: 6;
+        position: relative;
+        left: 11%;
+        top: -63%;
+      }
+
+      #circle6 {
+        z-index: 7;
+        position: relative;
+        left: 34%;
+        top: -95.5%;
+      }
+
+      #circle7 {
+        border-right: 2px solid white;
+        z-index: 8;
+        position: relative;
+        left: 57.5%;
+        top: -128%;
+      }
+
+      #circle8 {
+        border-left: 2px solid white;
+        z-index: 9;
+        position: relative;
+        left: 22.1%;
+        top: -135%;
+      }
+
+      #circle9 {
+        border-right: 2px solid white;
+        z-index: 10;
+        position: relative;
+        left: 45%;
+        top: -167.5%;
+      }
+
+      #circle10 {
+        border: 2px solid white;
+        z-index: 11;
+        position: relative;
+        left: 34%;
+        top: -174%;
+      }
+
+      .mouth {
+        animation-name: mouth;
+        animation-duration: 5s;
+        animation-timing-function: linear;
+        animation-iteration-count: 1;
+        animation-direction: normal;
+        animation-fill-mode: forwards;
+        z-index: 12;
+        position: relative;
+        background-color: black;
+        height: 10px;
+        width: 20px;
+        top: -272%;
+        left: 41%;
+        border-radius: 50%;
+      }
+
+/* ********************* BOTTOM ************************* */
+
+      .blob-bottom {
+        z-index: 1;
+        position: relative;
+        border: 3px solid #315B68;
+        margin: auto;
+        top: -279.75%;
+        left: -14%;
+        background: #2B505B;
+        width: 123%;
+        height: 187%;
+        border-radius: 40%;
+      }
+
+      .heart {
+        animation-name: heart;
+        animation-duration: 1.5s;
+        animation-timing-function: ease-in-out;
+        animation-iteration-count: infinite;
+        animation-direction: normal;
+        z-index: 12;
+        position: absolute;
+        background-color: #E86668;
+        width: 20px;
+        height: 20px;
+        top: 212.5%;
+        left: 41.5%;
+        transform: rotate(-135deg);
+      }
+
+      .circleHeartParts {
+        position: relative;
+        background-color: #E86668;
+        width: 20px;
+        height: 20px;
+        border-radius: 50%;
+      }
+
+      #left-side {
+        z-index: 13;
+        top: 50%;
+        left: 0%;
+      }
+
+      #right-side {
+        z-index: 14;
+        top: -100%;
+        left: 50%;
+      }
+
+/* ******************* KEYFRAMES ************************ */
+
+      @keyframes upAndDown {
+        0% {
+
+        }
+        66% {
+          margin-top: 0%;
+        }
+        70%, 75% {
+          margin-top: 24.6%;
+        }
+        83% {
+          margin-top: 0%;
+        }
+        91%, 96% {
+          margin-top: -23%;
+        }
+        100% {
+          margin-top: 0%;
+        }
+      }
+
+      @keyframes heart {
+        0% {
+          transform: scale(1) rotate(-135deg);
+        }
+        50% {
+          transform: scale(0.6) rotate(-135deg);
+        }
+      }
+
+      #hoot {
+        display: flex;
+        flex-direction: column;
+        margin: auto;
+        margin-top: 20%;
+        transform: scale(0.85);
+        width: 500px;
+        height: 700px;
+        margin-top: -10%;
+        margin-bottom: -21.5%;
+      }
+
+      .moonBlock {
+        margin: auto;
+        z-index: 600;
+        background-color: #385263;
+        width: 500px;
+        height: 150px;
+        margin-top: -100%;
+        margin-top: 0;
+      }
+
+      #block-moon {
+        position: relative;
+        z-index: 602;
+        margin: auto;
+        height: 100%;
+        width: 30%;
+        background-color: #385263;
+        margin-left: 35%;
+      }
+
+      #block-sun {
+        position: relative;
+        z-index: 602;
+        margin: auto;
+        width: 30%;
+        height: 100%;
+        background-color: #385263;
+        margin-left: 35%;
+      }
+
+      .sunBlock {
+        margin: auto;
+        z-index: 600;
+        background-color: #385263;
+        width: 500px;
+        height: 150px;
+        margin-top: 100%;
+      }
+
+      #sun {
+        animation-name: sun;
+        animation-duration: 48s;
+        animation-duration: 16s;
+        animation-duration: 48s;
+        animation-timing-function: linear;
+        animation-iteration-count: infinite;
+        animation-direction: normal;
+        z-index: 60;
+        height: 60px;
+        width: 60px;
+        border-radius: 50%;
+        background-color: #FD8C00;
+        transform: scale(0.69);
+        position: relative;
+        top: -47%;
+        margin: auto;
+        margin-top: -11%;
+      }
+
+      #moon {
+        animation-name: moon;
+        animation-duration: 48s;
+        animation-duration: 16s;
+        animation-duration: 48s;
+        animation-timing-function: linear;
+        animation-iteration-count: infinite;
+        animation-direction: normal;
+        z-index: 70;
+        position: relative;
+        height: 100px;
+        width: 100px;
+        border-radius: 50%;
+        background-color: transparent;
+        box-shadow: 3px 3px 0 0 #F7FFDC;
+        margin-top: -87.5%;
+        left: 37%;
+
+        top: -98.5%;
+        margin: auto;
+        left: -1.5%;
+
+        margin-top: 38%;
+        left: -37.75%;
+        z-index: 55;
+
+        left: -2%;
+        margin-top: 7.5%;
+      }
+
+      @keyframes moon {
+        66% {
+          margin-top: 7.5%;
+        }
+        70%, 75% {
+          margin-top: 34.5%;
+        }
+        83% {
+          margin-top: -1%;
+        }
+        91%, 96% {
+          margin-top: 7.5%;
+        }
+        100% {
+          margin-top: 7.5%;
+        }
+      }
+
+      .elongated {
+        position: relative;
+        width: 0;
+        height: 0;
+        border-bottom: 37.5px solid #FFA300;
+        border-left: 4px solid transparent;
+        border-right: 4px solid transparent;
+        border-radius: 20%;
+      }
+
+      #e1 {
+        left: 43%;
+        top: -70%;
+      }
+
+      #e2 {
+        left: -18%;
+        top: -108%;
+        transform: rotate(-45deg);
+      }
+
+      #e3 {
+        left: -45%;
+        top: -105%;
+        transform: rotate(-90deg);
+      }
+
+      #e4 {
+        left: -20%;
+        top: -103%;
+        transform: rotate(-135deg);
+      }
+
+      #e5 {
+        left: 43%;
+        top: -140%;
+        transform: rotate(-180deg);
+      }
+
+      #e6 {
+        left: 108%;
+        top: -228%;
+        transform: rotate(-225deg);
+      }
+
+      #e7 {
+        left: 135%;
+        top: -355%;
+        transform: rotate(-270deg);
+      }
+
+      #e8 {
+        left: 108%;
+        top: -484%;
+        transform: rotate(45deg);
+      }
+
+      @keyframes sun {
+        66% { /*66.666% */
+          margin-top: -11%;
+        }
+        70%, 75% { /* 70.791%, 73.541% */
+          margin-top: -11%;
+        }
+        83% { /* 83.166% */
+          margin-bottom: 11%;
+          margin-top: -11%;
+        }
+        91%, 96% { /* 92.791%, 95.541% */
+          margin-top: -41.5%;
+          margin-bottom: 41.5%;
+        }
+        100% {
+          margin-top: -11%;
+          margin-bottom: 11%;
+        }
+      }
+
+      #eyelid1 {
+        animation-name: eyelid1;
+        animation-duration: 16s;
+        animation-timing-function: linear;
+        animation-iteration-count: infinite;
+        animation-direction: normal;
+        z-index: 1000;
+        position: absolute;
+        top: 22%;
+        left: 24.5%;
+        background-color: #FFE1A9;
+        width: 16%;
+        height: 11%;
+        border-radius: 50% 50% 20% 20%;
+      }
+
+      #eyelid2 {
+        animation-name: eyelid2;
+        animation-duration: 16s;
+        animation-timing-function: linear;
+        animation-iteration-count: infinite;
+        animation-direction: normal;
+        z-index: 1000;
+        position: absolute;
+        top: 22%;
+        left: 59.5%;
+        background-color: #FFE1A9;
+        width: 16%;
+        height: 11%;
+        border-radius: 50% 50% 20% 20%;
+      }
+
+      @keyframes eyelid1 {
+        0% {
+          top: 22%;
+        }
+        32% {
+          top: 22%;
+        }
+        33% {
+          top: 33%;
+        }
+        34.5% {
+          top: 22%;
+        }
+        90% {
+          top: 22%;
+        }
+        91% {
+          top: 33%;
+        }
+        92.5% {
+          top: 22%;
+        }
+        100% {
+          top: 22%;
+        }
+      }
+
+      @keyframes eyelid2 {
+        0% {
+          top: 22%;
+        }
+        32% {
+          top: 22%;
+        }
+        33% {
+          top: 33%;
+        }
+        34.5% {
+          top: 22%;
+        }
+        90% {
+          top: 22%;
+        }
+        91% {
+          top: 33%;
+        }
+        92.5% {
+          top: 22%;
+        }
+        100% {
+          top: 22%;
+        }
+      }
