--- a/dahlia.css
+++ b/dahlia.css
@@ -1183,6 +1183,37 @@ footer div {
   margin-bottom: -135px;
 }
 
+/* iPhone 4 and 4S Main Stories (Portrait) CHECK TO SEE HOW THIS LOOKS */
+@media only screen and
+  (min-device-width: 320px) and
+  (max-device-width: 480px) and
+  (-webkit-min-device-pixel-ratio: 2) and
+  (orientation: portrait) {
+
+  }
+
+/* iPhone 5, 5S, 5C and 5SE Main Stories (Portrait) */
+@media only screen and
+  (min-device-width: 320px) and
+  (max-device-width: 568px) and
+  (-webkit-min-device-pixel-ratio: 2) and
+  (orientation: portrait) {
+    #mrcloud {
+      transform: scale(2);
+    }
+}
+
+/* iPhone 6, 6S, 7 and 8 Main Stories (Portrait) IS THIS THE SAME AS iPHONE X ? */
+@media only screen and
+  (min-device-width: 375px) and
+  (max-device-width: 667px) and
+  (-webkit-min-device-pixel-ratio: 2) and
+  (orientation: portrait) {
+    #mrcloud {
+      transform: scale(2);
+    }
+}
+
 #container {
 
         width: 500px;
