--- a/dahlia.css
+++ b/dahlia.css
@@ -315,6 +315,7 @@ a:hover {
     #gnome span p {
       /*font-size: 2.5rem;*/
       line-height: 2.5rem;
+      font-size: 4rem;
     }
     
     #gnome p {
@@ -393,8 +394,9 @@ a:hover {
     }
 
     #gnome span p {
-      font-size: 2.5rem;
+      /*font-size: 2.5rem;*/
       line-height: 2.5rem;
+      font-size: 4rem;
     }
     
     #gnome p {
