--- a/dahlia.css
+++ b/dahlia.css
@@ -1170,7 +1170,7 @@ footer div {
     }
     
     #APD {
-      font-size: 2.8em;
+      font-size: .5em;
     }
 }
 
@@ -1192,7 +1192,7 @@ footer div {
     }
     
     #APD {
-      font-size: 2.8em;
+      font-size: .5em;
     }
 }
 
